--- a/assets/scss/_about-info.scss
+++ b/assets/scss/_about-info.scss
@@ -78,7 +78,7 @@
 /* HOMEPAGE 02
 /*----------------------------------------*/
 .aboutus02 {
-  padding: 65px 0px 210px 0px;
+  padding: 65px 0px 165px 0px;
   position: relative;
   &-wrapper {
     max-width: 93%;
@@ -87,7 +87,6 @@
       h2 {
         line-height: 64px;
         display: inline-block;
-        margin-bottom: 45px;
       }
       p {
         font-size: 18px;
@@ -95,7 +94,6 @@
         line-height: 30px;
         margin-top: 20px;
         display: inline-block;
-        margin-bottom: 20px;
       }
 
       margin-bottom: 20px;
