--- a/assets/scss/_callto-action.scss
+++ b/assets/scss/_callto-action.scss
@@ -74,11 +74,10 @@
       margin-top: 20px;
     }
     p {
+      font-size: 18px;
+      line-height: 30px;
       margin-bottom: 20px;
       margin-top: -5px;
-    }
-    a.primary__button {
-      margin-top: 35px;
     }
   }
   // Comments Group
