--- a/assets/scss/_services-introduction.scss
+++ b/assets/scss/_services-introduction.scss
@@ -44,7 +44,7 @@
     a {
       margin-top: 50px;
       transition: 0.3s;
-      margin-top: 55px;
+      margin-top: 30px;
     }
   }
 }
