--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -132,6 +132,9 @@
 
     li {
       padding-right: 50px;
+      a {
+        color: #aebef5;
+      }
     }
   }
   .right-content {
